# GXTStudio

./: .gitignore  AboutDialog.cpp  AboutDialog.h  AppConfig.h  BackgroundCache.h  BackgroundConfigDialog.cpp  BackgroundConfigDialog.h  CMakeLists.txt  CMakeUserPresets.json  CNAME  CharTableExportWorker.cpp  CharTableExportWorker.h  CharTableManager.h  CharTableParser.cpp  CharTableParser.h  CharTableWidget.cpp  CharTableWidget.h  CodeTableConverter.cpp  CodeTableConverter.h  DebugConfigDialog.h  FilterProxyModel.h  FontAwesome.h  GXTEditor.cpp  GXTEditor.h  GXTParser.cpp  GXTParser.h  GXTStudio.cpp  GXTStudio.h  GXTStudio.ui  GXTStyleManager.cpp  GXTStyleManager.h  GXTTableModel.cpp  GXTTableModel.h  GXTVersionUtils.cpp  GXTVersionUtils.h  IconCache.h  InvertedIndex.cpp  InvertedIndex.h  ItemPool.cpp  ItemPool.h  (+32 more)
docs/: CNAME  index.html  tutorial.html
keylist/: IVTKEY.lst  SATKEY.lst
